updated news home page

--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -10,20 +10,7 @@
     sizes="32x32"
     href="./images/favicon-32x32.png"/>
     <link rel="stylesheet" href="styles.css" />
-
-    <title>Frontend Mentor | News homepage</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 14px;
-        text-align: center;
-        margin-top: 2rem;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+   <title>Frontend Mentor | News homepage</title>
   </head>
   <body>
     <header class="header">
@@ -135,9 +122,8 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="https://tsbsankara.com">James Njuguna</a>.
+      >. Coded by <a href="https://tsbjsjsjj.com">James Njuguna</a>.
     </div>
-
-    <script src="script.js"></script>
+   <script src="script.js"></script>
   </body>
 </html>
