--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -122,7 +122,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="https://tsbjsjsjj.com">James Njuguna</a>.
+      >. Coded by <a href="https://frontend.com">James Njuguna</a>.
     </div>
    <script src="script.js"></script>
   </body>
